syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "model.proto";

message ShowDeviceFirmwareDescriptorResponse {
  FirmwareDescriptor firmware_descriptor = 1;
}